a possible change in header

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,24 @@
                        </nav>
                     </div>
                 </div>
+<!--<div class="header-page">
+    <h1 class="header-page__title">Милые штуки ручной работы для дома</h1>
+    <div class="header-padge__descrip interior">
+        <h2>Предметы интерьера</h2>
+        <a href="">
+            <img src="" alt="pic" class="header-padge__icon--interior">
+        </a>
+    </div>
+    <div class="header-page__descript childtoys">
+        <h2>Детские игрушки</h2>
+        <a href="">
+            <img src="" alt="pic" class="header-padge__icon--childtoys">
+        </a>
+    </div>
+</div>-->
+
+
+
                 <div class="menu-bottom">
                     <ul class="menu-bottom__list">
                         <div class="header__img">
