подключила стили/начала стилизовать для мобилки и таблета

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="style/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
         <title>Mishka - интернет - магазин</title>
     </head>
     <body>
@@ -19,12 +21,10 @@
                             <span class="hamburger__btn"></span>
                         </label>
                         <nav class="hamburger__nav">
+                            <a class="menu-top__logo" href="#">
+                                <img class="menu-top__logo-img" src="img/logo-mishka.png" width="" height="" alt="Mishka">
+                            </a>
                             <ul class="menu-top__list">
-                               <li class="menu-top__item logo">
-                                   <a class="menu-top__link link-logo" href="#">
-                                       <img class="logo-img" src="" width="" height="" alt="Mishka">
-                                   </a>
-                               </li>
                                <li class="menu-top__item">
                                    <a class="menu-top__link" href="#">Каталог товаров</a>
                                </li>
@@ -50,11 +50,11 @@
                             <img class="menu-bottom__img" src="" width="" height="" alt=""> 
                         </div>
                         <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
-                        <li class="menu-bottom__item">
-                            <a class="menu-bottom__link" href="#">Предметы интерьера</a>
+                        <li class="menu-bottom__item menu-bottom__item--left">
+                            <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Предметы интерьера</p></a>
                         </li>
-                        <li class="menu-bottom__item">
-                            <a class="menu-bottom__link" href="#">Детские игрушки</a>
+                        <li class="menu-bottom__item menu-bottom__item--right">
+                            <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Детские игрушки</p></a>
                         </li>
                    </ul>
                </div>
