--- a/src/form.html
+++ b/src/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style/main.css">
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
@@ -50,10 +51,10 @@
                         <img class="menu-bottom__img" src="" width="" height="" alt=""> 
                     </div>
                     <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
-                    <li class="menu-bottom__item">
+                    <li class="menu-bottom__item menu-bottom__item--left">
                         <a class="menu-bottom__link" href="#">Предметы интерьера</a>
                     </li>
-                    <li class="menu-bottom__item">
+                    <li class="menu-bottom__item menu-bottom__item--right">
                         <a class="menu-bottom__link" href="#">Детские игрушки</a>
                     </li>
                </ul>
