--- a/src/catalog.html
+++ b/src/catalog.html
@@ -20,9 +20,11 @@
                        <span class="hamburger__btn"></span>
                    </label>
                    <nav class="hamburger__nav">
-                        <a class="menu-top__logo" href="#">
-                            <img class="menu-top__logo-img" src="img/logo-mishka.png" width="" height="" alt="Mishka">
-                        </a>
+                        <div class="menu-top__logo">
+                            <a class="menu-top__logo-link" href="#">
+                                <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
+                            </a>
+                        </div>
                        <ul class="menu-top__list">
                           <li class="menu-top__item">
                               <a class="menu-top__link" href="#">Каталог товаров</a>
