--- a/src/form.html
+++ b/src/form.html
@@ -20,12 +20,12 @@
                             <span class="hamburger__btn"></span>
                         </label>
                         <nav class="hamburger__nav">
+                            <div class="menu-top__logo">
+                                <a class="menu-top__logo-link" href="#">
+                                    <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
+                                </a>
+                            </div>
                             <ul class="menu-top__list">
-                                <li class="menu-top__item logo">
-                                    <a class="menu-top__link link-logo" href="#">
-                                        <img class="logo-img" src="" width="" height="" alt="Mishka">
-                                    </a>
-                                </li>
                                 <li class="menu-top__item">
                                     <a class="menu-top__link" href="#">Каталог товаров</a>
                                 </li>
