--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
         <title>Mishka - интернет - магазин</title>
     </head>
@@ -21,9 +21,11 @@
                             <span class="hamburger__btn"></span>
                         </label>
                         <nav class="hamburger__nav">
-                            <a class="menu-top__logo" href="#">
-                                <img class="menu-top__logo-img" src="img/logo-mishka.png" width="" height="" alt="Mishka">
-                            </a>
+                            <div class="menu-top__logo">
+                                <a class="menu-top__logo-link" href="#">
+                                    <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
+                                </a>
+                            </div>
                             <ul class="menu-top__list">
                                <li class="menu-top__item">
                                    <a class="menu-top__link" href="#">Каталог товаров</a>
