--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD:index.html
+
         <link rel="stylesheet" href="css/main.css">
-=======
+
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
->>>>>>> 58ab95b4513fffd80250f4f7424dfd25dc44f638:src/index.html
+
         <title>Mishka - интернет - магазин</title>
     </head>
     <body>
@@ -27,23 +27,26 @@
                         <nav class="hamburger__nav">
                             <div class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="#">
-                                    <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
+                                    <img class="menu-top__logo-img" src="img/logo-mishka-mobile.png" width="" height="" alt="Mishka">
                                 </a>
                             </div>
-                            <ul class="menu-top__list">
-                               <li class="menu-top__item">
+                            <ul class="menu-top__item">
+                               <li class="menu-top__list">
                                    <a class="menu-top__link" href="#">Каталог товаров</a>
                                </li>
-                               <li class="menu-top__item">
+                               <li class="menu-top__list">
                                    <a class="menu-top__link" href="#">Вязание на заказ</a>
                                </li>
-                               <li class="menu-top__item">
+                               <li class="menu-top__list">
                                    <form class="search-form">
                                        <label class="search">Поиск по сайту</label>
-                                       <input class="input-search" type="search">
+                                <a href="">
+                                  <img src="img/search-svg.png" alt="">
+                                </a>
+
                                    </form>
                                </li>
-                               <li class="menu-top__item">
+                               <li class="menu-top__list">
                                     <a class="menu-top__link" href="#">Корзина: пока пуста</a>
                                </li>
                           </ul>
@@ -71,7 +74,7 @@
                 <div class="menu-bottom">
                     <ul class="menu-bottom__list">
                         <div class="header__img">
-                            <img class="menu-bottom__img" src="" width="" height="" alt=""> 
+                            <img class="menu-bottom__img" src="" width="" height="" alt="">
                         </div>
                         <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
                         <li class="menu-bottom__item menu-bottom__item--left">
@@ -102,7 +105,7 @@
                        <tr class="catalog__row table__row">
                            <td class="catalog__cell table__cell">Высота:</td>
                            <td class="catalog__cell table__cell">15 см</td>
-                       </tr> 
+                       </tr>
                    </table>
                    <img class="catalog__img" src="" width="" height="" alt="Вязаные корзинки">
                    <p class="catalog__price">990 руб.</p>
@@ -129,8 +132,8 @@
                 <div class="slider__slides">
                     <h2 class="slider__title">Отзывы</h2>
                      <div class="slider__slide">
-                        <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, 
-                            как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, 
+                        <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
+                            как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
                             и мои фотографии сразу стали более стильными, а также набирают больше лайков!
                         </p>
                         <span class="slider____auth">Анастасия Красильникова @misssssiskras</span>
@@ -158,7 +161,7 @@
                 </tr>
             </table>
             <div class="map">
-                <img class="map__img" src="" width="" height="" alt="Карта"> 
+                <img class="map__img" src="" width="" height="" alt="Карта">
             </div>
             <button class="btn contacts__btn">Напишите нам</button>
         </section>
