--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/main.css">
 
-        <link rel="stylesheet" href="style.css">
+
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 
         <title>Mishka - интернет - магазин</title>
@@ -26,13 +26,13 @@
                         </label>
                         <nav class="hamburger__nav">
                             <div class="menu-top__logo">
-                                <a class="menu-top__logo-link" href="#">
+                                <a class="menu-top__logo-link" href="index.html" >
                                     <img class="menu-top__logo-img" src="img/logo-mishka-mobile.png" width="" height="" alt="Mishka">
                                 </a>
                             </div>
                             <ul class="menu-top__item">
                                <li class="menu-top__list">
-                                   <a class="menu-top__link" href="#">Каталог товаров</a>
+                                   <a class="menu-top__link" href="catalog.html" target="blank">Каталог товаров</a>
                                </li>
                                <li class="menu-top__list">
                                    <a class="menu-top__link" href="#">Вязание на заказ</a>
@@ -74,7 +74,7 @@
                 <div class="menu-bottom">
                     <ul class="menu-bottom__list">
                         <div class="header__img">
-                            <img class="menu-bottom__img" src="" width="" height="" alt="">
+                            <img class="menu-bottom__img" src=""  alt="">
                         </div>
                         <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
                         <li class="menu-bottom__item menu-bottom__item--left">
