--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
     <title>Mishka - интернет - магазин</title>
 </head>
     <body>
@@ -21,13 +21,8 @@
                         </label>
                         <nav class="hamburger__nav">
                             <div class="menu-top__logo">
-<<<<<<< HEAD
-                                <a class="menu-top__logo-link" href="#">
-                                      <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
-=======
                                <a class="menu-top__logo-link" href="#">
-                                   <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
->>>>>>> 1863fa21389941e5086ee9cfd3666c6d45aef46b
+                                   <img class="menu-top__logo-img" src="" width="" height="" alt="">
                                </a>
                             </div>
                             <ul class="menu-top__list">
