--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                    </form>
                                </li>
                                <li class="menu-top__item">
-                                    <a class="menu-top__link" href="#">Корзина: пока пуста</a>
+                                    <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста</a>
                                </li>
                           </ul>
                        </nav>
@@ -52,10 +52,14 @@
                         </div>
                         <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
                         <li class="menu-bottom__item menu-bottom__item--left">
-                            <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Предметы интерьера</p></a>
+                            <a class="menu-bottom__link" href="#">
+                                <p class="menu-bottom__caption">Предметы интерьера</p>
+                            </a>
                         </li>
                         <li class="menu-bottom__item menu-bottom__item--right">
-                            <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Детские игрушки</p></a>
+                            <a class="menu-bottom__link" href="#">
+                                <p class="menu-bottom__caption">Детские игрушки</p>
+                            </a>
                         </li>
                    </ul>
                </div>
