--- a/index.html
+++ b/index.html
@@ -27,20 +27,29 @@
                                    <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
                                </a>
                             </div>
-                            <ul class="menu-top__list">
-                               <li class="menu-top__item">
+                            <ul class="menu-top__item">
+                               <li class="menu-top__list">
                                    <a class="menu-top__link" href="catalog.html" target="blank">Каталог товаров</a>
                                </li>
-                               <li class="menu-top__item">
+                               <li class="menu-top__list">
                                    <a class="menu-top__link" href="#">Вязание на заказ</a>
                                </li>
-                               <li class="menu-top__item">
+                              <li class="menu-top__list">
+                                <a href="" class="menu-top__list-search">
+                                  <span class="menu-top__search">Поиск по сайту</span>
+                                </a>
+                              </li>
+
+
+
+                               <!--<li class="menu-top__item">
                                    <form class="search-form">
                                        <label class="search">Поиск по сайту</label>
                                        <input class="input-search" type="search">
                                    </form>
-                               </li>
-                               <li class="menu-top__item">
+                               </li>-->
+
+                               <li class="menu-top__list">
                                     <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста</a>
                                </li>
                           </ul>
