--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style/main.css">
-<link rel="stylesheet" href="/src/js/main.js">
+<link rel="stylesheet" href="src/js/main.js">
 <link rel="stylesheet" href="dist/js/scripts.min.js">
 
     <title>Mishka - интернет - магазин - каталог</title>
