--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/style/main.css">
+<link rel="stylesheet" href="src/js/main.js">
+<link rel="stylesheet" href="dist/js/scripts.min.js">
   <title>Mishka - интернет - магазин</title>
 </head>
     <body>
@@ -304,6 +306,7 @@
     </ul>
     <button class="btn modal-ctg__btn">Добавить</button>
   </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </body>
 
 </html>
