--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,11 @@
                        <span class="hamburger__btn"></span>
                    </label>
                    <nav class="hamburger__nav">
-                        <div class="menu-top__logo"></div>
+                        <div class="menu-top__logo">
+<a class="menu-top__logo-link" href="#">
+  <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="" height="" alt="Mishka">
+</a>
+                        </div>
                        <ul class="menu-top__item">
                           <li class="menu-top__list">
                               <a class="menu-top__link" href="#">Каталог товаров</a>
@@ -73,7 +77,7 @@
                     </div>
                 </div>
 
- <img class="catalog__img" src="src/img/photo-2-mobile.png"  alt="Корзинка для белья">
+ <img class="catalog__img" src="src/img/item2-mobile-1x.jpg"  alt="Корзинка для белья">
                 <div class="catalog__item">
                     <h3 class="catalog__title">Корзинка для белья</h3>
                       <div class="catalog__detail">
@@ -86,7 +90,7 @@
                     </div>
                     </div>
                 </div>
-<img class="catalog__img" src="src/img/photo-3-mobile.png"  alt="Большая корзина для игрушек">
+<img class="catalog__img" src="src/img/item3-mobile-1x.jpg"  alt="Большая корзина для игрушек">
                 <div class="catalog__item">
 
 
@@ -116,10 +120,10 @@
 </div>
 <div class="video-page">
 <div class="video-page__video">
-  <img src="src/img/video-mobile.png" alt="" >
+  <img src="src/img/video-mobile-1x.jpg" alt="" >
 </div>
 <div class="video-page__link-pic">
-  <img src="src/img/play-svg.png" alt="">
+
 </div>
 
 </div>
