--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
                             <a class="menu-top__logo-link" href="#">
-                                <img class="menu-top__logo-mobile" src="./src/img/logo-mobile.png" width="" height="" alt="Mishka">
+                                <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="" height="" alt="Mishka">
                             </a>
                             <a class="menu-top__logo-link" href="#">
-                                <img class="menu-top__logo-tablet" src="./src/img/logo-tablet.png" width="" height="" alt="Mishka">
+                                <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="" height="" alt="Mishka">
                             </a>
                             <a class="menu-top__logo-link" href="#">
-                                <img class="menu-top__logo-desktop" src="./src/img/logo-desktop.png" width="" height="" alt="Mishka">
+                                <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="" height="" alt="Mishka">
                             </a>
                            </div>
                            <li class="menu-top__item">
@@ -89,7 +89,7 @@
                        </tr>
                    </table>
                 </div>
-                   <img class="catalog__img" src="./src/img/triple-mobile-1x.jpg" width="" height="" alt="Вязаные корзинки">
+                   <img class="catalog__img" src="src/img/triple-mobile-1x.jpg" width="" height="" alt="Вязаные корзинки">
                 <div class="catalog__to-buy">
                     <p class="catalog__price">Цена: 990 руб.</p>
                     <button class="btn catalog__btn">Заказать</button>
