--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
 
               <h3 class="player-process__title">Процесс производства</h3>
               <a href="" class="player-process__link">
-              <img src="src/img/video-svg.png" alt="" class="player-process__link-pic">
+              <img src="" alt="" class="player-process__link-pic">
               </a>
 </div>
 <div class="video-page">
