--- a/catalog.html
+++ b/catalog.html
@@ -64,6 +64,7 @@
             <section class="catalog">
 <div class="catalog__img"></div>
                 <div class="catalog__item">
+
 <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
                     <div class="catalog__detail">
                         <p class="catalog__descr">Рост 30 см, вес 200 г</p>
@@ -76,8 +77,9 @@
                     </div>
                 </div>
 
- <img class="catalog__img" src="src/img/item2-mobile-1x.jpg"  alt="Корзинка для белья">
+<div class="catalog__img1"></div>
                 <div class="catalog__item">
+
                     <h3 class="catalog__title">Корзинка для белья</h3>
                       <div class="catalog__detail">
                         <p class="catalog__descr">Диаметр 15 см, высота 10 см</p>
@@ -89,7 +91,8 @@
                     </div>
                     </div>
                 </div>
-<img class="catalog__img" src="src/img/item3-mobile-1x.jpg"  alt="Большая корзина для игрушек">
+<div class="catalog__img2"></div>
+<!--<img class="catalog__img" src="src/img/item3-mobile-1x.jpg"  alt="Большая корзина для игрушек">-->
                 <div class="catalog__item">
 
 
